:lazy load: catalogo item

--- a/index.html
+++ b/index.html
@@ -1,14 +1,196 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jonas Quirino">
     <meta name="keywords" content="Site para visualização de compra de tênis">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Tenis Outlet</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <h1>Tênis Outlet</h1>
+            <div class="procurar">
+                <form action="" method="GET">
+                    <input type="search" name="buscar" placeholder="Procurar">
+                    <button type="submit">
+                        <i class="fa fa-search"> </i>
+                        <i class="fa fa-shopping-cart"></i>
+                    </button>
+                </form>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Masculino </a></li>
+                    <li><a href="#">Feminino</a></li>
+                    <li><a href="#">Infantil</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </div>
+        </header>
+        <section class="info">
+            <div class="envio">
+                <i class="fas fa-truck"></i>
+                <h3>Envio Grátis</h3>
+                <p>Envio gratuito para todo o Brasil</p>
+            </div>
+            <div class="parcela">
+                <i class="fas fa-credit-card"></i>
+                <h3>Parcele em até 12 vezes</h3>
+                <p>Parcele com qualquer bandeira de cartão</p>
+            </div>
+            <div class="seguro">
+                <i class="fas fa-lock"></i>
+                <h3>Site seguro</h3>
+                <p>Proteção de dados </p>
+            </div>
+        </section>
+        <section class="catalogo">
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="./img/puma.jpg" alt="Tenis Puma">
+                </div>
+                <h3>Tênis Puma Branco</h3>
+                <span class="preco">R$ 299,90</span>
+                <p>6x de R$ 49,98</p>
+                <p>ou à vista por R$ 289,89</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/rally-branco.jpg" alt="">
+                </div>
+                <h3>Tênis Rally Branco </h3>
+                <span class="preco">R$ 250,80</span>
+                <p>6x de R$ 41,80</p>
+                <p>ou à vista por R$ 245,90</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/Tenis_Reebok.jpg" alt="">
+                </div>
+                <h3>Tênis Reebok Cinza</h3>
+                <span class="preco">R$ 200,00</span>
+                <p>6x R$ 33,33</p>
+                <p>ou à vista por R$ 191,00</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/Tenis_Kaptir.jpg" alt="">
+                </div>
+                <h3>Tênis Adidas Roxo</h3>
+                <span class="preco">R$ 300,00</span>
+                <p>6x R$ 50,00</p>
+                <p>ou à vista por 290,99</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                <img src="" data-url="img/Tenis-Nike.jpg" alt="">
+            </div>
+                <h3>Tênis Nike Rosa</h3>
+                <span class="preco">R$ 280,90</span>
+                <p>6x R$ 46,81</p>
+                <p>ou à vista por 273,00</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/Tenis_standard.jpg" alt="">
+                </div>
+                <h3>Tênis Adidas Branco</h3>
+                <span class="preco">R$ 250,00</span>
+                <p>6x R$ 41,66</p>
+                <p>ou à vista por R$ 244,00</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/Tenis-NikeAirmax.jpg" alt="">
+                </div>
+                <h3>Tênis Nike Vermelho</h3>
+                <span class="preco">R$ 380,00</span>
+                <p>6x R$ 63,33</p>
+                <p>ou à vista por 370,00</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/Tenis_U_Path.jpg" alt="">
+                </div>
+                <h3>Tênis Adidas Preto</h3>
+                <span class="preco">R$ 200,00</span>
+                <p>6x R$ 33,33</p>
+                <p>ou à vista por R$ 190,99</p>
+                <a href="#">Comprar</a>
+            </div>
+            <div class="catalogo-item">
+                <div class="lazy-img">
+                    <img src="" data-url="img/TenisAdidas.jpg" alt="">
+                </div>
+                <h3>Tênis Preto com Cinza</h3>
+                <span class="preco">R$ 250,00</span>
+                <p>6x R$ 41,66</p>
+                <p>ou à vista por R$ 235,99</p>
+                <a href="#">Comprar</a>
+            </div>
+        </section>
+
+        <footer>
+            
+        </footer>
+    </div>
+
+    <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
+    <script >
+
+        var carregarImagem;
+
+        $(document).ready(function(){
+            $(".lazy-img img").on("load",function(){
+                $(this).addClass("loaded");
+            });
+            $(document).on("scroll", function(){
+                carregarImagem();
+            });
+
+            (carregarImagem = function carregarImagem(){
+                $.each($(".lazy-img"), function(){
+                    var block = $(this);
+                    var imagem = block.find("img");
+
+                    if (visivel(block)){
+                        var url = imagem.data("url");
+
+                        if (imagem.attr("src") != url){
+                            imagem.attr("src", url);
+                        };
+                    }
+                });
+            })();
+        });
+        function visivel(element) {
+            var janela = $(window);
+            var topo = janela.scrollTop();
+
+            var inferior = topo + janela.height();
+            var elementoTopo = element.offset().top;
+            var elementoInferior = elementoTopo + element.height();
+
+            return elementoInferior > topo && elementoTopo < inferior;
+        }
+    </script>
 </body>
+
 </html>
