--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <span class="preco">R$ 299,90</span>
                 <p>6x de R$ 49,98</p>
                 <p>ou à vista por R$ 289,89</p>
-                <a href="#">Comprar</a>
+                <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -73,7 +73,7 @@
                 <span class="preco">R$ 250,80</span>
                 <p>6x de R$ 41,80</p>
                 <p>ou à vista por R$ 245,90</p>
-                <a href="#">Comprar</a>
+                 <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -83,7 +83,7 @@
                 <span class="preco">R$ 200,00</span>
                 <p>6x R$ 33,33</p>
                 <p>ou à vista por R$ 191,00</p>
-                <a href="#">Comprar</a>
+                <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -93,7 +93,7 @@
                 <span class="preco">R$ 300,00</span>
                 <p>6x R$ 50,00</p>
                 <p>ou à vista por 290,99</p>
-                <a href="#">Comprar</a>
+                 <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -103,7 +103,7 @@
                 <span class="preco">R$ 280,90</span>
                 <p>6x R$ 46,81</p>
                 <p>ou à vista por 273,00</p>
-                <a href="#">Comprar</a>
+                <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -113,7 +113,7 @@
                 <span class="preco">R$ 250,00</span>
                 <p>6x R$ 41,66</p>
                 <p>ou à vista por R$ 244,00</p>
-                <a href="#">Comprar</a>
+                 <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -123,7 +123,7 @@
                 <span class="preco">R$ 380,00</span>
                 <p>6x R$ 63,33</p>
                 <p>ou à vista por 370,00</p>
-                <a href="#">Comprar</a>
+                <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -133,7 +133,7 @@
                 <span class="preco">R$ 200,00</span>
                 <p>6x R$ 33,33</p>
                 <p>ou à vista por R$ 190,99</p>
-                <a href="#">Comprar</a>
+                <span class="link-compra">Comprar</span>
             </div>
             <div class="catalogo-item">
                 <div class="lazy-img">
@@ -143,7 +143,7 @@
                 <span class="preco">R$ 250,00</span>
                 <p>6x R$ 41,66</p>
                 <p>ou à vista por R$ 235,99</p>
-                <a href="#">Comprar</a>
+                <span class="link-compra">Comprar</span>
             </div>
         </section>
 
